--- a/Areas/Admin/Views/PurchaseDetails/CreateID.cshtml
+++ b/Areas/Admin/Views/PurchaseDetails/CreateID.cshtml
@@ -26,18 +26,18 @@
                    </td>
                    <td class= "text-center">
         @{
-                          <select   class="form-control" asp-items="ViewBag.ProductDemo" id="pro${rowIdx}"></select>
+                      <select   class="form-control" asp-items="ViewBag.ProductDemo" id="pro${rowIdx}"></select>
 
         }
                      </td>
                    <td class= "text-center">
         @{
-            <input type = "text" class="form-control" id="pri${rowIdx}"/>
+                <input type = "text" class="form-control" id="pri${rowIdx}"/>
         }
                       </td>
                    <td class= "text-center">
         @{
-            <input class="form-control" type="text" id="qua${rowIdx}" />
+                <input class="form-control" type="text" id="qua${rowIdx}" />
         }
                       </td>
                    <td class= "text-center">
@@ -64,7 +64,7 @@
                    quantity.push(qua);
 
             });
-           
+
           // jQuery button click event to add a row
           $("#addBtn").on("click", function () {
             // Adding a row inside the tbody.
@@ -75,18 +75,18 @@
                    </td>
                    <td class= "text-center">
         @{
-                          <select   class="form-control" asp-items="ViewBag.ProductId" id="pro${rowIdx}"></select>
+                              <select   class="form-control" asp-items="ViewBag.ProductId" id="pro${rowIdx}"></select>
 
         }
                      </td>
                    <td class= "text-center">
         @{
-            <input type = "text" class="form-control" id="pri${rowIdx}"/>
+                <input type = "text" class="form-control" id="pri${rowIdx}"/>
         }
                       </td>
                    <td class= "text-center">
         @{
-            <input class="form-control" type="text" id="qua${rowIdx}" />
+                <input class="form-control" type="text" id="qua${rowIdx}" />
         }
                       </td>
                    <td class= "text-center">
@@ -114,7 +114,7 @@
 
             });
 
-           
+
 
           });
 
@@ -151,13 +151,14 @@
           });
                $('#sub').click(function(){
               var suppierid = $('#supplierid').val();
-
+            var inven = $('#invenid').val();
               var model = new Object();
               model.Productid = product;
               model.Price = price;
               model.Quantity = quantity;
               model.Paid = total;
               model.SupplierId = suppierid;
+              model.InvenId = inven;
               console.log(model);
              jQuery.ajax({
               type: "POST",
@@ -175,7 +176,7 @@
 
         });
 
-     
+
     </script>
 </head>
 <body>
@@ -196,9 +197,24 @@
         </div>
 
         <div class="container-fluid">
-            <div class="form-group">
-                <label class="control-label">Chọn nhà cung cấp</label>
-                <select class="form-control" asp-items="ViewBag.SupplierId" id = "supplierid"></select>
+
+            <div class="row">
+                <div class="col-xl-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <label class="control-label">Chọn nhà cung cấp</label>
+                            <select class="form-control" asp-items="ViewBag.SupplierId" id="supplierid"></select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <label class="control-label">Chọn Kho dich</label>
+                            <select class="form-control" asp-items="ViewBag.InventoryId" id="invenid"></select>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="table-responsive card">
                 <table class="table table-bordered">
