--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -145,37 +145,12 @@
                         </a>
                         <ul aria-expanded="false">
                             <li><a asp-controller="Dashboards" asp-action="Dashboard1" asp-area="Admin">Doanh thu</a></li>
-                            <li><a asp-area="Admin" asp-page="/Manage/Dashboard2">Chi phí</a></li>
-                              <li><a asp-area="Admin" asp-page="/Manage/Dashboard3">Thống kê sản phẩm</a></li>
+                            <li><a asp-controller="Dashboards" asp-action="Dashboard2" asp-area="Admin">Chi phí</a></li>
+                             
+                        </ul>
+                    </li>
                    
-                        </ul>
-                    </li>
-                    <li class="nav-label">Apps</li>
-                    <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-app-store"></i><span class="nav-text">Apps</span>
-                        </a>
-                        <ul aria-expanded="false">
-                            <li><a asp-area="Admin" asp-page="/Manage/Profile">Profile</a></li>
-                            <li>
-                                <a class="has-arrow" href="javascript:void()" aria-expanded="false">Email</a>
-                                <ul aria-expanded="false">
-                                    <li><a asp-area="Admin" asp-page="/Manage/Email_Compose">Compose</a></li>
-                                    <li><a href="./email-inbox.html">Inbox</a></li>
-                                    <li><a href="./email-read.html">Read</a></li>
-                                </ul>
-                            </li>
-                            <li><a asp-area="Admin" asp-page="/Manage/Calendar">Calendar</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-chart-bar-33"></i><span class="nav-text">Một cái gì đó thông minh</span>
-                        </a>
-                        <ul aria-expanded="false">
-                            <li><a asp-action="Map" asp-area="" asp-controller="Home">Một cái gì đó thông minh hơn</a></li>
-                        </ul>
-                    </li>
+                   
                     <li class="nav-label">Bảng điều khiển</li>
                     <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
@@ -217,8 +192,7 @@
                             <i class="icon icon-cart-simple"></i><span class="nav-text">Quản lý mua hàng</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a asp-controller="PurchaseDetails" asp-action="Requests" asp-area="Admin">Yêu cầu báo giá</a></li>
-                            <li><a asp-controller="PurchaseDetails" asp-action="Receipt" asp-area="Admin">Đơn mua hàng</a></li>
+           
                             <li><a asp-controller="PurchaseDetails" asp-action="Transaction" asp-area="Admin">Tất cả giao dịch</a></li>
                             <li><a asp-controller="Suppliers" asp-action="Index" asp-area="Admin">Nhà cung cấp</a></li>
                         </ul>
@@ -247,7 +221,7 @@
                     </li>
                     <li>
                         <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-form"></i><span class="nav-text"> Nội dun           g</span>
+                            <i class="icon icon-form"></i><span class="nav-text"> Nội dung</span>
                         </a>
                         <ul aria-expanded="false">
                           @*  <li><a href="./form-element.html">Slide</a></li>
