--- a/Views/OrderDetails/Thank.cshtml
+++ b/Views/OrderDetails/Thank.cshtml
@@ -18,7 +18,7 @@
         <img src='~/img/index/web_component5.jpg' style="height: 30%; width: 30%;"  />
     </div>
 </div>
- <script type="text/javascript">/*
+ <script type="text/javascript">
 window.onload = function ()
 {
     setTimeout(RedirectToUrl, 10000);
@@ -26,6 +26,6 @@ window.onload = function ()
 function RedirectToUrl()
 {
     window.location = "/";
-}*/
+}
 </script>
 
