--- a/Areas/Admin/Views/Dashboards/Dashboard1.cshtml
+++ b/Areas/Admin/Views/Dashboards/Dashboard1.cshtml
@@ -21,8 +21,8 @@
                             <i class="ti-money text-success border-success"></i>
                         </div>
                         <div class="stat-content d-inline-block">
-                            <div class="stat-text">Lợi nhuận</div>
-                            <div class="stat-digit">1,012</div>
+                            <div class="stat-text">Doanh thu</div>
+                            <div class="stat-digit">@Model.Profit</div>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                         </div>
                         <div class="stat-content d-inline-block">
                             <div class="stat-text">Khách hàng</div>
-                            <div class="stat-digit">961</div>
+                            <div class="stat-digit">@Model.Customer</div>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                         </div>
                         <div class="stat-content d-inline-block">
                             <div class="stat-text">Sản phẩm</div>
-                            <div class="stat-digit">770</div>
+                            <div class="stat-digit">@Model.Product</div>
                         </div>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                         </div>
                         <div class="stat-content d-inline-block">
                             <div class="stat-text">Doanh số hôm nay</div>
-                            <div class="stat-digit">2,781</div>
+                            <div class="stat-digit">@Model.Todei</div>
                         </div>
                     </div>
                 </div>
@@ -87,19 +87,19 @@
                     <div class="card-body text-center">
                         <div class="m-t-10">
                             <h4 class="card-title">Phản hồi của khách hàng</h4>
-                            <h2 class="mt-3">385749</h2>
+                            <h2 class="mt-3">@Model.totalfeed</h2>
                         </div>
                         <div class="widget-card-circle mt-5 mb-5" id="info-circle-card">
                             <i class="ti-control-shuffle pa"></i>
                         </div>
                         <ul class="widget-line-list m-b-15">
                             <li class="border-right">
-                                92% <br><span class="text-success">
+                                @Model.pos_feed/@Model.totalfeed % <br><span class="text-success">
                                     <i class="ti-hand-point-up"></i> Positive
                                 </span>
                             </li>
                             <li>
-                                8% <br><span class="text-danger">
+                                @Model.dis_feed/@Model.totalfeed % <br><span class="text-danger">
                                     <i class="ti-hand-point-down"></i>Negative
                                 </span>
                             </li>
@@ -498,42 +498,48 @@
 
                 (function ($) {
             "use strict";
+                 var dat1 = [];
+                  @foreach (var item in Model.View) {
 
+                    <text>  dat1.push({y: "@item.ProductName", a: 0, b: "@item.View"});  </text>
+
+                }
             // Morris bar chart
             Morris.Bar({
                 element: 'morris-bar-chart',
-                data: [{
-                    y: 'hmm',
-                    a: 10,
-                    b: 90
-                }, {
-                    y: '2016',
-                    a: 75,
-                    b: 65
-                }, {
-                    y: '2017',
-                    a: 50,
-                    b: 40
-                }, {
-                    y: '2018',
-                    a: 75,
-                    b: 65
-                }, {
-                    y: '2019',
-                    a: 50,
-                    b: 40
-                }, {
-                    y: '2020',
-                    a: 75,
-                    b: 65
-                }, {
-                    y: '2021',
-                    a: 100,
-                    b: 90
-                }],
+                //data: [{
+                //    y: 'hmm',
+                //    a: 10,
+                //    b: 90
+                //}, {
+                //    y: '2016',
+                //    a: 75,
+                //    b: 65
+                //}, {
+                //    y: '2017',
+                //    a: 50,
+                //    b: 40
+                //}, {
+                //    y: '2018',
+                //    a: 75,
+                //    b: 65
+                //}, {
+                //    y: '2019',
+                //    a: 50,
+                //    b: 40
+                //}, {
+                //    y: '2020',
+                //    a: 75,
+                //    b: 65
+                //}, {
+                //    y: '2021',
+                //    a: 100,
+                //    b: 90
+                //}],
+                data : dat1,
                 xkey: 'y',
                 ykeys: ['a', 'b'],
-                labels: ['mua', 'xem'],
+                labels: ['mua','xem'],
                 barColors: ['#343957', '#5873FE'],
                 hideHover: 'auto',
                 gridLineColor: '#eef0f2',
@@ -541,7 +547,7 @@
             });
 
             $('#info-circle-card').circleProgress({
-                value: 0.90,
+                value: @Model.pos_feed/@Model.totalfeed,
                 size: 100,
                 fill: {
                     gradient: ["#a389d5"]
@@ -598,12 +604,18 @@
 
             var nk = document.getElementById("sold-product");
             // nk.height = 50
+            var dat = [];
+              @foreach (var item in Model.inven_count) {
+
+                    <text>  dat.push(@item);  </text>
+
+                }
             new Chart(nk, {
                 type: 'pie',
                 data: {
                     defaultFontFamily: 'Poppins',
                     datasets: [{
-                        data: [45, 25, 20],
+                        data: dat,
                         borderWidth: 0,
                         backgroundColor: [
                             "rgba(89, 59, 219, .9)",
