--- a/Areas/Admin/Views/Dashboards/Dashboard2.cshtml
+++ b/Areas/Admin/Views/Dashboards/Dashboard2.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WEB2.Models.OrderDetail>
+﻿@model WEB2.Areas.Order.Db2
 
 @{
     ViewData["Title"] = "Dashboard2";
@@ -12,7 +12,7 @@
 <body>
     <div class="container-fluid">
 
-        <div class="row">
+       <div class="row">
             <div class="col-lg-3 col-sm-6">
                 <div class="card">
                     <div class="stat-widget-one card-body">
@@ -20,8 +20,8 @@
                             <i class="ti-money text-success border-success"></i>
                         </div>
                         <div class="stat-content d-inline-block">
-                            <div class="stat-text">Profit</div>
-                            <div class="stat-digit">1,012</div>
+                            <div class="stat-text">Doanh thu</div>
+                            <div class="stat-digit">@Model.Profit</div>
                         </div>
                     </div>
                 </div>
@@ -33,8 +33,8 @@
                             <i class="ti-user text-primary border-primary"></i>
                         </div>
                         <div class="stat-content d-inline-block">
-                            <div class="stat-text">Customer</div>
-                            <div class="stat-digit">961</div>
+                            <div class="stat-text">Khách hàng</div>
+                            <div class="stat-digit">@Model.Customer</div>
                         </div>
                     </div>
                 </div>
@@ -46,8 +46,8 @@
                             <i class="ti-desktop text-pink border-pink"></i>
                         </div>
                         <div class="stat-content d-inline-block">
-                            <div class="stat-text">Projects</div>
-                            <div class="stat-digit">770</div>
+                            <div class="stat-text">Sản phẩm</div>
+                            <div class="stat-digit">@Model.Product</div>
                         </div>
                     </div>
                 </div>
@@ -59,8 +59,8 @@
                             <i class="ti-receipt text-danger border-danger"></i>
                         </div>
                         <div class="stat-content d-inline-block">
-                            <div class="stat-text">Referral</div>
-                            <div class="stat-digit">2,781</div>
+                            <div class="stat-text">Doanh số hôm nay</div>
+                            <div class="stat-digit">@Model.Todei</div>
                         </div>
                     </div>
                 </div>
@@ -76,12 +76,16 @@
                                 <div class="form-group">
                                     <label>Select Year: </label>
                                     <select class="form-control input-sm" id="select_year">
-                                    
+                                                         
                                             @for(int i = 2020; i<=2065; i++){
                                                
-                                            var selected = (i == 2022)? "selected":"";
-                                            
-                                               <option value="@i">@i</option>
+                                            @if(i == Model.Year) {
+                                                    <option value="@i" selected="selected">@i</option>
+                                            } else {
+                                               <option value="@i">@i</option> 
+                                            }
+
+                                             
                                             
                                             }
                                         
@@ -113,120 +117,7 @@
                 </div>
                 <!-- /# card -->
             </div>
-            <div class="col-lg-8">
-                <div class="card">
-                    <div class="card-header">
-                        <h4 class="card-title">Chi tiết thu chi</h4>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table student-data-table m-t-20">
-                                <thead>
-                                    <tr>
-                                        <th>Expense Type</th>
-                                        <th>Amount</th>
-                                        <th>Status</th>
-                                        <th>Email</th>
-                                        <th>Date</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-
-                                        <td>
-                                            Salary
-                                        </td>
-                                        <td>
-                                            $2000
-                                        </td>
-                                        <td>
-                                            <span class="badge badge-primary">Paid</span>
-                                        </td>
-                                        <td>
-                                            edumin@gmail.com
-                                        </td>
-                                        <td>
-                                            10/05/2017
-                                        </td>
-                                    </tr>
-                                    <tr>
-
-                                        <td>
-                                            Salary
-                                        </td>
-                                        <td>
-                                            $2000
-                                        </td>
-                                        <td>
-                                            <span class="badge badge-warning">Pending</span>
-                                        </td>
-                                        <td>
-                                            edumin@gmail.com
-                                        </td>
-                                        <td>
-                                            10/05/2017
-                                        </td>
-                                    </tr>
-                                    <tr>
-
-                                        <td>
-                                            Salary
-                                        </td>
-                                        <td>
-                                            $2000
-                                        </td>
-                                        <td>
-                                            <span class="badge badge-primary">Paid</span>
-                                        </td>
-                                        <td>
-                                            edumin@gmail.com
-                                        </td>
-                                        <td>
-                                            10/05/2017
-                                        </td>
-                                    </tr>
-                                    <tr>
-
-                                        <td>
-                                            Salary
-                                        </td>
-                                        <td>
-                                            $2000
-                                        </td>
-                                        <td>
-                                            <span class="badge badge-danger">Due</span>
-                                        </td>
-                                        <td>
-                                            edumin@gmail.com
-                                        </td>
-                                        <td>
-                                            10/05/2017
-                                        </td>
-                                    </tr>
-                                    <tr>
-
-                                        <td>
-                                            Salary
-                                        </td>
-                                        <td>
-                                            $2000
-                                        </td>
-                                        <td>
-                                            <span class="badge badge-primary">Paid</span>
-                                        </td>
-                                        <td>
-                                            edumin@gmail.com
-                                        </td>
-                                        <td>
-                                            10/05/2017
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+           
         </div>
     </div>
     <!-- Required vendors -->
@@ -330,5 +221,12 @@
 
 
 const wt2 = new PerfectScrollbar('.widget-todo2');
+    </script>
+    <script>
+    $(function() {
+        $('#select_year').change(function() {
+            window.location.href = 'dashboard2?year=' + $(this).val();
+        });
+    });
     </script>
 </body>
