--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -241,7 +241,7 @@
                     </li>
                     <li class="nav-label">Content</li>
                     <li>
-                        <a href="widget-basic.html" aria-expanded="false">
+                        <a asp-controller="Chat" asp-action="ListChat" asp-area="" aria-expanded="false">
                             <i class="icon icon-phone-2"></i><span class="nav-text">Liên hệ</span>
                         </a>
                     </li>
