Fixed the middlerware

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
             </a>
         </div>
         <div>
-            <a>
+            <a href="/home/search?searchString=xiaomi+11T">
                 <img class="d-block w-100" src="https://lh3.googleusercontent.com/lGfcqDi7r3sNG28Ko56lJA16kMqwaurs8YGg6bxxes2tvRLR-9X0pHL1K-WiownXmgLCVxhbd0C7Emb4XqvJCaDBgg8oMw_DPIpbtSM4AZWdZ_fx7ZlFlwRVM1hNXRekW_uBPoJusRg4ej5rJZDeKy9k-NyVp1vDp5QIg8dA_0SMKCCe5OjRAb08LhGtZCoBpzTHUCeGYFLxUvKlUqcGSnWRAXFWd6tGTb03naDhAxYIEwy-TNncTbzUMVDlXV1tqY1-bh3hDS73s9j-rBPStkYRE21N5CjS4hvD5kYzXChcQVIg_DgHgKSQNdtFnz4sUzTqMtbv9u4gyMXOEn8ZhmTxas13FcvlUFMmaSdv7I8uTN28Cd3I4hp7AJ34yCqkwwqjjc06SuUgWuvzDmjG1-DFry4gcBDHPbnGWrfOmiVdaO8MWPQ5jdNnUlwJ263ZBJykCzUBRE38g-1HMo1TccBcPGjGsYS2zHJfqHxMATdct-brLLW3I9k8zxJDLFZfk5B8Q-7RShezJbmkI6CjkmyxsSTxOqUVlRmVyZgl5R6RuCFPBfjg1wf-w7CzUymEeoBuL0zDPuBptTHrYT9OIwYwgZKjhjcRX1TJgQlCEJcfhPz0EIzbi8WRk7lP5QvT4_XVNnV9JIpPfciGNuXfkLkkhXoVmlJeMNbVvnfMhmm37ssu6LTv8WpJEklYiUL9YrphmLPwY0c8lTjGbWfWesxp=w1200-h382-no?authuser=1" alt="Sixth slide">
             </a>
         </div>
