--- a/Views/OrderDetails/Index.cshtml
+++ b/Views/OrderDetails/Index.cshtml
@@ -12,10 +12,12 @@
 <div class="colory-lg-3"">
     @if (Model.Count() == 0){
         <div style="display: grid; justify-content:center; align-items:center">
-                <p>Oh nooo ! giỏ hàng của bạn trống trơn T.T  !!</p>
-                <p>Hãy cùng chú mèo vui vẻ hạnh phúc yêu đời này đi lựa vài món nhé </p>
+                <h5 style="text-align: center">Có vẻ như giỏ hàng của bạn đang trống</h5>
                 <a style="margin:auto;" href="/">
-                    <img style="width:100%; height: 100%" src="https://media.discordapp.net/attachments/871653685023891457/915250284320673832/248025594_350168303553137_898236470416803569_n.jpg"/>
+                    <img style="width:100%; height: 100%" src="https://lh3.googleusercontent.com/J1wyERnsSk6G30z8uS6iuvxngcf2Efe-SK0f62-InVnCNctTKghwuBIUfTAm0_90pRXxXw6wcch8mbq4vDh0EdN-24KqVIyeYZMXhsxmhPXX1WzUpmiW6ZJ1PUzWV-9RbnGq8WtFYlpfDTMjhdB_XMClemx_DYab86eb6ru3nWCcIKfxxYdMMusClXXJPzVWAI4hY8CMDpyrFLAA_laFBL00B3RHjXWJZm5JPNJebAyJiXfQuF40H5y7DzZ7rBA-uBBhTSLXuS3fUZt6stHtt0_0XTm6HWCf6Yb7zEN3Dc9VmNx6AhoZCnPZnO3vlbY-whEQOMqG2n5swZSh4VnZ4hnHskRttjSqX1E1VSueGjli1E6YgrD_pdjgeW49GpaiNCSw7tNwU6zfizsiqVlWQ7wjVCcZ4Q_8JPTi9HwDJgdN5n5_IeaEh0Sp9PDqubjK4FXXRBUHPeTapyFSK7RzlaQil9lDsI4T35V4CXchL91CeUYsCW6bqTTiOVAIyz_2GRWPgtxzvZqPBiGTKyuicmbMj46Q-3axCsKg5SDYvfDqyZ0i31U7cTaoTdy-GkkhVr5sE5oYDttULRw_wFO_dhhnEJPhigVBOUlNKHw8b5iTBpv7BkCHeE3hGKrUAoZiPbz4Qm_zf5g2C9wUSRn5c98rWNGpiI6BE05l3AvfQvWRVENf7vHC-bB_tNlZnxcejnJ_TPi6kOqYE94b4yGFQgtp=w486-h409-no?authuser=1"/>
+                </a>
+                 <a style="margin:auto;" href="/">
+                     Về trang chủ
                 </a>
         </div>
     }
